force-app/main/default/objects/Studentt__c/Studentt__c.object-meta.xml
<CustomObject>
    <label>Studentt</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Studentts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>