force-app/main/default/objects/Studentt__c/fields/Branch_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Branch_Subjects__c</fullName>
    <label>Branch Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECE Subject - 1,2,3,4</fullName>
            </value>
            <value>
                <fullName>CSE - 1, 2, 3</fullName>
            </value>
            <value>
                <fullName>EEE  - 1 ,2</fullName>
            </value>
            <value>
                <fullName>IT - 1, 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>