force-app/main/default/objects/Studentt__c/fields/CSE_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>CSE_Branch_Description__c</fullName>
    <label>CSE Branch Description</label>
    <length>16</length>
    <type>Text</type>
</CustomField>