force-app/main/default/objects/Studentt__c/fields/ECE_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>ECE_Branch_Description__c</fullName>
    <label>ECE Branch Description</label>
    <length>16</length>
    <type>Text</type>
</CustomField>