force-app/main/default/objects/Studentt__c/fields/EEE_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>EEE_Branch_Description__c</fullName>
    <label>EEE Branch Description</label>
    <length>16</length>
    <type>Text</type>
</CustomField>