force-app/main/default/objects/Studentt__c/fields/IT_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Branch_Description__c</fullName>
    <label>IT Branch Description</label>
    <length>16</length>
    <type>Text</type>
</CustomField>